--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "GraphQL ecommerce serve",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
@@ -17,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6"
   },
